--- a/src/output.css
+++ b/src/output.css
@@ -211,9 +211,6 @@
   .relative {
     position: relative;
   }
-  .top-0 {
-    top: calc(var(--spacing) * 0);
-  }
   .top-3 {
     top: calc(var(--spacing) * 3);
   }
@@ -291,12 +288,6 @@
   }
   .h-\[4\.5rem\] {
     height: 4.5rem;
-  }
-  .h-full {
-    height: 100%;
-  }
-  .h-screen {
-    height: 100vh;
   }
   .w-1 {
     width: calc(var(--spacing) * 1);
@@ -609,6 +600,10 @@
   .underline {
     text-decoration-line: underline;
   }
+  .shadow-header {
+    --tw-shadow: var(--tw-shadow-color, rgba(140, 136, 136, 0.16)) 0px 10px 36px 0px, var(--tw-shadow-color, rgba(129, 125, 125, 0.06)) 0px 0px 0px 1px;
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
   .shadow-sm {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -694,11 +689,6 @@
     @media (width >= 64rem) {
       font-size: var(--text-sm);
       line-height: var(--tw-leading, var(--text-sm--line-height));
-    }
-  }
-  .dark\:visible {
-    &:where(.dark, .dark *) {
-      visibility: visible;
     }
   }
   .dark\:block {
@@ -848,6 +838,12 @@
       color: var(--color-white);
     }
   }
+  .dark\:shadow-none {
+    &:where(.dark, .dark *) {
+      --tw-shadow: 0 0 #0000;
+      box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
 }
 @font-face {
   font-family: "iran-yekan";
@@ -892,7 +888,6 @@
   justify-content: start;
   margin: 1rem;
   padding: 0.3rem;
-  box-shadow: rgba(140, 136, 136, 0.16) 0px 10px 36px 0px, rgba(129, 125, 125, 0.06) 0px 0px 0px 1px;
 }
 .mobile__header-h3 {
   font-size: 1rem;
@@ -957,7 +952,7 @@
   margin-top: 15rem;
 }
 .darkmode__container > button:last-child {
-  border-top: 1px solid #E9E9E9;
+  border-top: 1px solid #e9e9e9;
   padding-top: 1rem;
   width: 85%;
   margin: 0 auto;
